--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
-  color-scheme: dark;
+  /* color-scheme: dark; */
 }
 
 .hash-span {
